fixed wrong padding in navigation

--- a/src/5-components/navigation.scss
+++ b/src/5-components/navigation.scss
@@ -22,6 +22,7 @@
     text-decoration: underline 0.1em transparent;
     transition: text-decoration-color 250ms ease-in, fill 200ms ease-in;
     border: none;
+    padding-inline: inherit;
   }
 
   & :where(a, button):hover {
@@ -59,10 +60,6 @@
 
     & #menu-button {
       display: flex;
-    }
-
-    & button {
-      padding: inherit;
     }
 
     & form {
